fix: project create / fetch
